#1477 fix scrollbar

--- a/src/app/modules/dashboard/components/dashboard/dashboard.component.less
+++ b/src/app/modules/dashboard/components/dashboard/dashboard.component.less
@@ -3,8 +3,8 @@
 .themeMixin({
   :host {
     gridster {
-      scrollbar-width: thin;
-      scrollbar-color: @scrollbar-color transparent;
+      //scrollbar-width: thin;
+      //scrollbar-color: @scrollbar-color transparent;
 
       &::-webkit-scrollbar {
         width: 12px;
